ex4 add credits

--- a/Assignments/HW_25Sep/HW_25Sep_Ex4.ipynb
+++ b/Assignments/HW_25Sep/HW_25Sep_Ex4.ipynb
@@ -1012,7 +1012,22 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Since this data comes from the UCI ml repository I think they chose these 14 variables because many of them show either a moderately strong positive or negative correlation with the target variable. With some of these variables the correlation is to be expected, for instance, chest pain on a scale of 1 to 4 and heart disease are somewhat related. One caveat is that the data is too less here."
+    "#### Since this data comes from the UCI ml repository I think they chose these 14 variables because many of them show either a moderately strong positive or negative correlation with the target variable. With some of these variables the correlation is to be expected, for instance, chest pain on a scale of 1 to 4 and heart disease are somewhat related. One caveat is that the data is too less here but unprocessed raw files by country are available as well."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### The UCI page asks for acknowledgement if there are any publications that result from the data. The license on kaggle was The Reddit API terms in the individuals code repo.\n",
+    "\n",
+    "Citation Request:\n",
+    "\n",
+    "The authors of the databases have requested that any publications resulting from the use of the data include the names of the principal investigator responsible for the data collection at each institution. They would be:\n",
+    "1. Hungarian Institute of Cardiology. Budapest: Andras Janosi, M.D.\n",
+    "2. University Hospital, Zurich, Switzerland: William Steinbrunn, M.D.\n",
+    "3. University Hospital, Basel, Switzerland: Matthias Pfisterer, M.D.\n",
+    "4. V.A. Medical Center, Long Beach and Cleveland Clinic Foundation:Robert Detrano, M.D., Ph.D."
    ],
    "metadata": {}
   }
