--- a/Assignments/HW_25Sep/HW_25sep_Ex2.ipynb
+++ b/Assignments/HW_25Sep/HW_25sep_Ex2.ipynb
@@ -276,7 +276,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "source": [
-    "\n",
+    "# Name of the function is misleading, it returns an array of min hashes and a counter for net sequences, counting duplicates\n",
     "def getNmers_updated(seq_,interval = 15,disable_ = False):\n",
     "    min_hashes = np.full((100,1),np.inf)\n",
     "    counter_ = 0\n",
@@ -317,13 +317,13 @@
     "* method 1: 1/avg(hash_values) - 1\n",
     "* method 2: median(1/hash_value - 1 for all hash_values)\n",
     "\n",
-    "####  Having lst_finalb above could be really helpful in this regard since then I know exactly how many unique hashes are there."
+    "####  Having lst_finalb above could be really helpful in this regard since then I know exactly how many unique hashes are there in the entire sequence"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "source": [
     "## Function to get true value of sequences without duplicates\n",
     "def getNmers_test(seq_,interval = 15):\n",
