--- a/Assignments/HW_10Oct/Consolidated.ipynb
+++ b/Assignments/HW_10Oct/Consolidated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,12 +56,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Since I load data below, checking for common overlapping papers in Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### For Abstract Texts, I appended them into a list, even though when we run SPECTER I just join them with spaces. Could have done that from the get go but I thought having a list is convenient if we ever need to look at just a specific para or count length of paras etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,11 +85,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
     "dfCancer,dfAlzheimer = meshTerms_obj.getData()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Checking for any common papers (Part of Exercise 1). There seem to be 2 papers in common"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'32501203', '32529139'}"
+      ]
+     },
+     "execution_count": 280,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(dfCancer.index).intersection(set(dfAlzheimer.index))"
    ]
   },
   {
@@ -755,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +890,7 @@
        "Animals          0       0     0            0     0"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,27 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 225,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_summaryTable.loc['Humans','Treatment Outcome']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +1012,7 @@
        "Animals        160      37    87            5    13"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,6 +1320,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Here PC0 seems to be great, especially with PC2 and okayish with PC1 when it comes to separability. Data is undistinguishable across PC1 and PC2 though. Probably since PC0 must be capturing most variablity followed by PC1 and PC2 but not sure about that reasoning though"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Saving resultList as a .npy file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
@@ -1519,6 +1554,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Since there were 2 categories which means 1 lda vector will be generated. I chose to create a stripplot which is ideal if one of the variables is categorical and also a box plot to see the spread, since lda tries to maximize separability between classes while keeping members of each class close together by minimizing variance among the class. This is kinda evident in the box plot. Lda also seems like possibly the slightly better choice than PCA here given how well we observe the separability, PCA had a little bit more noise with some points deep within the other class's cluster."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise 4 "
    ]
   },
@@ -1531,24 +1573,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9058244160005415\n"
+      "0.4676948750000065\n"
      ]
     }
    ],
    "source": [
     "from Exercises import Ex4\n",
     "from time import perf_counter\n",
+    "import importlib\n",
+    "import numpy as np\n",
     "importlib.reload(Ex4)\n",
     "lst = np.array([100,99,95,2,3,1,4,5])\n",
     "t_start = perf_counter()\n",
-    "Ex4.mergeSort_parallelized(lst)\n",
+    "l2 = Ex4.mergeSort_parallelized(lst)\n",
     "t_stop = perf_counter()\n",
     "print(t_stop-t_start)\n"
    ]
@@ -1573,42 +1617,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from Exercises import test\n",
     "importlib.reload(test)\n",
-    "arr_size = [1,10,100,1000,10000,100000,1000000]\n",
+    "arr_size = [1,10,100,1000,10000,100000,500000]\n",
     "\n",
     "vals = test.run_test(arr_size)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'parallel': {'1': 0.9182099999998172,\n",
-       "  '10': 0.9123324169995612,\n",
-       "  '100': 0.8620807499992225,\n",
-       "  '1000': 0.8585282910007663,\n",
-       "  '10000': 1.036174499999106,\n",
-       "  '100000': 4.943139457998768,\n",
-       "  '1000000': 243.69374550000066},\n",
-       " 'regular': {'1': 6.1660011851927266e-06,\n",
-       "  '10': 0.00020545900042634457,\n",
-       "  '100': 0.002786125000056927,\n",
-       "  '1000': 0.04250420800053689,\n",
-       "  '10000': 0.6028503750003438,\n",
-       "  '100000': 11.262836457999583,\n",
-       "  '1000000': 374.7534429169991}}"
+       "{'parallel': {'1': 0.38196349999998347,\n",
+       "  '10': 0.3777509999999893,\n",
+       "  '100': 0.3939482909997878,\n",
+       "  '1000': 0.38415758299993286,\n",
+       "  '10000': 0.564704249999977,\n",
+       "  '100000': 4.195562999999993,\n",
+       "  '500000': 55.981015166999896},\n",
+       " 'regular': {'1': 8.33000058264588e-07,\n",
+       "  '10': 0.00019304200009173655,\n",
+       "  '100': 0.002907000000050175,\n",
+       "  '1000': 0.0418037499998718,\n",
+       "  '10000': 0.5976160830000481,\n",
+       "  '100000': 9.829663499999924,\n",
+       "  '500000': 105.53251700100009}}"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1621,7 +1665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For a million time taken by the regular algorithm is about 1.5 times"
+    "#### For a million, the time taken by the regular algorithm is about 2 times"
    ]
   }
  ],
