--- a/Assignments/HW_10Oct/Consolidated.ipynb
+++ b/Assignments/HW_10Oct/Consolidated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,11 +85,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "dfCancer,dfAlzheimer = meshTerms_obj.getData()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ArticleTitle</th>\n",
+       "      <th>AbstractText</th>\n",
+       "      <th>query</th>\n",
+       "      <th>mesh_terms</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>34702262</th>\n",
+       "      <td>Inhibition of microRNA-103a inhibits the activ...</td>\n",
+       "      <td>[The aim of this study is to explore the effec...</td>\n",
+       "      <td>cancer</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34692085</th>\n",
+       "      <td>A green, efficient and precise hydrogen therap...</td>\n",
+       "      <td>[By combined use of traditional Chinese acupun...</td>\n",
+       "      <td>cancer</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34691993</th>\n",
+       "      <td>Sin1-mediated mTOR signaling in cell growth, m...</td>\n",
+       "      <td>[The mammalian target of rapamycin (mTOR) is a...</td>\n",
+       "      <td>cancer</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34691992</th>\n",
+       "      <td>Influence of the microbiota on epigenetics in ...</td>\n",
+       "      <td>[Colorectal cancer is one of the most common m...</td>\n",
+       "      <td>cancer</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34691990</th>\n",
+       "      <td>Phenotype and target-based chemical biology in...</td>\n",
+       "      <td>[Chemical biology has been attracting a lot of...</td>\n",
+       "      <td>cancer</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32398988</th>\n",
+       "      <td>Factors Influencing the Onset of Neoadjuvant T...</td>\n",
+       "      <td>[Time to treatment onset (TTTO) is critical in...</td>\n",
+       "      <td>cancer</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32398986</th>\n",
+       "      <td>EVA-Scalp: Evaluation of Patient Satisfaction ...</td>\n",
+       "      <td>[Scalp cooling (SC) offers a chance to reduce ...</td>\n",
+       "      <td>cancer</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32398985</th>\n",
+       "      <td>Use of Complementary and Alternative Medicine ...</td>\n",
+       "      <td>[Complementary and alternative medicine (CAM) ...</td>\n",
+       "      <td>cancer</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32398983</th>\n",
+       "      <td>Tamoxifen Exposure during Pregnancy: A Systema...</td>\n",
+       "      <td>[Tamoxifen is frequently used as adjuvant trea...</td>\n",
+       "      <td>cancer</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32397034</th>\n",
+       "      <td>[Chronic myelomonocytic leukemia treated with ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>cancer</td>\n",
+       "      <td>[Humans, Leukemia, Myelomonocytic, Chronicdrug...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               ArticleTitle  \\\n",
+       "34702262  Inhibition of microRNA-103a inhibits the activ...   \n",
+       "34692085  A green, efficient and precise hydrogen therap...   \n",
+       "34691993  Sin1-mediated mTOR signaling in cell growth, m...   \n",
+       "34691992  Influence of the microbiota on epigenetics in ...   \n",
+       "34691990  Phenotype and target-based chemical biology in...   \n",
+       "...                                                     ...   \n",
+       "32398988  Factors Influencing the Onset of Neoadjuvant T...   \n",
+       "32398986  EVA-Scalp: Evaluation of Patient Satisfaction ...   \n",
+       "32398985  Use of Complementary and Alternative Medicine ...   \n",
+       "32398983  Tamoxifen Exposure during Pregnancy: A Systema...   \n",
+       "32397034  [Chronic myelomonocytic leukemia treated with ...   \n",
+       "\n",
+       "                                               AbstractText   query  \\\n",
+       "34702262  [The aim of this study is to explore the effec...  cancer   \n",
+       "34692085  [By combined use of traditional Chinese acupun...  cancer   \n",
+       "34691993  [The mammalian target of rapamycin (mTOR) is a...  cancer   \n",
+       "34691992  [Colorectal cancer is one of the most common m...  cancer   \n",
+       "34691990  [Chemical biology has been attracting a lot of...  cancer   \n",
+       "...                                                     ...     ...   \n",
+       "32398988  [Time to treatment onset (TTTO) is critical in...  cancer   \n",
+       "32398986  [Scalp cooling (SC) offers a chance to reduce ...  cancer   \n",
+       "32398985  [Complementary and alternative medicine (CAM) ...  cancer   \n",
+       "32398983  [Tamoxifen is frequently used as adjuvant trea...  cancer   \n",
+       "32397034                                                 []  cancer   \n",
+       "\n",
+       "                                                 mesh_terms  \n",
+       "34702262                                                 []  \n",
+       "34692085                                                 []  \n",
+       "34691993                                                 []  \n",
+       "34691992                                                 []  \n",
+       "34691990                                                 []  \n",
+       "...                                                     ...  \n",
+       "32398988                                                 []  \n",
+       "32398986                                                 []  \n",
+       "32398985                                                 []  \n",
+       "32398983                                                 []  \n",
+       "32397034  [Humans, Leukemia, Myelomonocytic, Chronicdrug...  \n",
+       "\n",
+       "[1000 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfCancer"
    ]
   },
   {
