--- a/Assignments/HW_Nov16/HW2.ipynb
+++ b/Assignments/HW_Nov16/HW2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,276 +439,73 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df_5 = Ex2.kmeans_parallel(data)"
+    "#### To demonstrate speed up I should probably record multiple times for the k means algorithm, however here I've kept it simple and demonstrated speed of kmeans_parallel in comparison to kmeans for k = 5,7 and 15"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>city</th>\n",
-       "      <th>city_ascii</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lng</th>\n",
-       "      <th>country</th>\n",
-       "      <th>iso2</th>\n",
-       "      <th>iso3</th>\n",
-       "      <th>admin_name</th>\n",
-       "      <th>capital</th>\n",
-       "      <th>population</th>\n",
-       "      <th>id</th>\n",
-       "      <th>cluster</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Tokyo</td>\n",
-       "      <td>Tokyo</td>\n",
-       "      <td>35.6897</td>\n",
-       "      <td>139.6922</td>\n",
-       "      <td>Japan</td>\n",
-       "      <td>JP</td>\n",
-       "      <td>JPN</td>\n",
-       "      <td>Tōkyō</td>\n",
-       "      <td>primary</td>\n",
-       "      <td>37977000.0</td>\n",
-       "      <td>1392685764</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Jakarta</td>\n",
-       "      <td>Jakarta</td>\n",
-       "      <td>-6.2146</td>\n",
-       "      <td>106.8451</td>\n",
-       "      <td>Indonesia</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>IDN</td>\n",
-       "      <td>Jakarta</td>\n",
-       "      <td>primary</td>\n",
-       "      <td>34540000.0</td>\n",
-       "      <td>1360771077</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Delhi</td>\n",
-       "      <td>Delhi</td>\n",
-       "      <td>28.6600</td>\n",
-       "      <td>77.2300</td>\n",
-       "      <td>India</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>Delhi</td>\n",
-       "      <td>admin</td>\n",
-       "      <td>29617000.0</td>\n",
-       "      <td>1356872604</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Mumbai</td>\n",
-       "      <td>Mumbai</td>\n",
-       "      <td>18.9667</td>\n",
-       "      <td>72.8333</td>\n",
-       "      <td>India</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>Mahārāshtra</td>\n",
-       "      <td>admin</td>\n",
-       "      <td>23355000.0</td>\n",
-       "      <td>1356226629</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Manila</td>\n",
-       "      <td>Manila</td>\n",
-       "      <td>14.6000</td>\n",
-       "      <td>120.9833</td>\n",
-       "      <td>Philippines</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>PHL</td>\n",
-       "      <td>Manila</td>\n",
-       "      <td>primary</td>\n",
-       "      <td>23088000.0</td>\n",
-       "      <td>1608618140</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40996</th>\n",
-       "      <td>Tukchi</td>\n",
-       "      <td>Tukchi</td>\n",
-       "      <td>57.3670</td>\n",
-       "      <td>139.5000</td>\n",
-       "      <td>Russia</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>RUS</td>\n",
-       "      <td>Khabarovskiy Kray</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1643472801</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40997</th>\n",
-       "      <td>Numto</td>\n",
-       "      <td>Numto</td>\n",
-       "      <td>63.6667</td>\n",
-       "      <td>71.3333</td>\n",
-       "      <td>Russia</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>RUS</td>\n",
-       "      <td>Khanty-Mansiyskiy Avtonomnyy Okrug-Yugra</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1643985006</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40998</th>\n",
-       "      <td>Nord</td>\n",
-       "      <td>Nord</td>\n",
-       "      <td>81.7166</td>\n",
-       "      <td>-17.8000</td>\n",
-       "      <td>Greenland</td>\n",
-       "      <td>GL</td>\n",
-       "      <td>GRL</td>\n",
-       "      <td>Sermersooq</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1304217709</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40999</th>\n",
-       "      <td>Timmiarmiut</td>\n",
-       "      <td>Timmiarmiut</td>\n",
-       "      <td>62.5333</td>\n",
-       "      <td>-42.2167</td>\n",
-       "      <td>Greenland</td>\n",
-       "      <td>GL</td>\n",
-       "      <td>GRL</td>\n",
-       "      <td>Kujalleq</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1304206491</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41000</th>\n",
-       "      <td>Nordvik</td>\n",
-       "      <td>Nordvik</td>\n",
-       "      <td>74.0165</td>\n",
-       "      <td>111.5100</td>\n",
-       "      <td>Russia</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>RUS</td>\n",
-       "      <td>Krasnoyarskiy Kray</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1643587468</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>41001 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              city   city_ascii      lat       lng      country iso2 iso3  \\\n",
-       "0            Tokyo        Tokyo  35.6897  139.6922        Japan   JP  JPN   \n",
-       "1          Jakarta      Jakarta  -6.2146  106.8451    Indonesia   ID  IDN   \n",
-       "2            Delhi        Delhi  28.6600   77.2300        India   IN  IND   \n",
-       "3           Mumbai       Mumbai  18.9667   72.8333        India   IN  IND   \n",
-       "4           Manila       Manila  14.6000  120.9833  Philippines   PH  PHL   \n",
-       "...            ...          ...      ...       ...          ...  ...  ...   \n",
-       "40996       Tukchi       Tukchi  57.3670  139.5000       Russia   RU  RUS   \n",
-       "40997        Numto        Numto  63.6667   71.3333       Russia   RU  RUS   \n",
-       "40998         Nord         Nord  81.7166  -17.8000    Greenland   GL  GRL   \n",
-       "40999  Timmiarmiut  Timmiarmiut  62.5333  -42.2167    Greenland   GL  GRL   \n",
-       "41000      Nordvik      Nordvik  74.0165  111.5100       Russia   RU  RUS   \n",
-       "\n",
-       "                                     admin_name  capital  population  \\\n",
-       "0                                         Tōkyō  primary  37977000.0   \n",
-       "1                                       Jakarta  primary  34540000.0   \n",
-       "2                                         Delhi    admin  29617000.0   \n",
-       "3                                   Mahārāshtra    admin  23355000.0   \n",
-       "4                                        Manila  primary  23088000.0   \n",
-       "...                                         ...      ...         ...   \n",
-       "40996                         Khabarovskiy Kray      NaN        10.0   \n",
-       "40997  Khanty-Mansiyskiy Avtonomnyy Okrug-Yugra      NaN        10.0   \n",
-       "40998                                Sermersooq      NaN        10.0   \n",
-       "40999                                  Kujalleq      NaN        10.0   \n",
-       "41000                        Krasnoyarskiy Kray      NaN         0.0   \n",
-       "\n",
-       "               id  cluster  \n",
-       "0      1392685764        4  \n",
-       "1      1360771077        4  \n",
-       "2      1356872604        4  \n",
-       "3      1356226629        4  \n",
-       "4      1608618140        4  \n",
-       "...           ...      ...  \n",
-       "40996  1643472801        4  \n",
-       "40997  1643985006        3  \n",
-       "40998  1304217709        3  \n",
-       "40999  1304206491        3  \n",
-       "41000  1643587468        3  \n",
-       "\n",
-       "[41001 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k = 5 parallel 3.040740416999995\n",
+      "k = 7 parallel 3.6819933749999905\n",
+      "k = 15 parallel 9.315571917\n"
+     ]
+    }
+   ],
+   "source": [
+    "from time import perf_counter\n",
+    "time_start = perf_counter()\n",
+    "df_5 = Ex2.kmeans_parallel(data)\n",
+    "time_end = perf_counter()\n",
+    "print(\"k = 5 parallel\",time_end - time_start)\n",
+    "time_start = perf_counter()\n",
+    "df_7 = Ex2.kmeans_parallel(data,7)\n",
+    "time_end = perf_counter()\n",
+    "print(\"k = 7 parallel\",time_end - time_start)\n",
+    "time_start = perf_counter()\n",
+    "df_5 = Ex2.kmeans_parallel(data,15)\n",
+    "time_end = perf_counter()\n",
+    "print(\"k = 15 parallel\",time_end - time_start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k = 5 regular 14.244063832999984\n",
+      "k = 7 regular 15.862300957999992\n",
+      "k = 15 regular 43.236587292000024\n"
+     ]
     }
    ],
    "source": [
     "#### Trying to see time regular k means takes in comparison\n",
-    "Ex2.kmeans(data)"
+    "\n",
+    "time_start = perf_counter()\n",
+    "Ex2.kmeans(data)\n",
+    "time_end = perf_counter()\n",
+    "print(\"k = 5 regular\",time_end - time_start)\n",
+    "time_start = perf_counter()\n",
+    "Ex2.kmeans(data,7)\n",
+    "time_end = perf_counter()\n",
+    "print(\"k = 7 regular\",time_end - time_start)\n",
+    "time_start = perf_counter()\n",
+    "Ex2.kmeans(data,15)\n",
+    "time_end = perf_counter()\n",
+    "print(\"k = 15 regular\",time_end - time_start)"
    ]
   },
   {
